# Task4-5

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  main.cpp  mainwindow.cpp  mainwindow.h
backend/: FaceDetector.cpp  FaceDetector.h  FaceRecognizer.cpp  FaceRecognizer.h  Facedetect_common.h  ModelEvaluator.cpp  ModelEvaluator.h  main.cpp
backend/include/: Segmentation.h  Thresholding.h  image.h
backend/src/: Segmentation.cpp  Thresholding.cpp
frontend/: ROCPlotDialog.cpp  ROCPlotDialog.h  mainwindow.cpp  mainwindow.h
